determinando minhas redes

--- a/instagram.html
+++ b/instagram.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github</title>
+    <title>instagram</title>
 
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="tela-instagram">
+    <img src="imagens\tela-instagram.jpeg" alt="tela-instagram">
 
     <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE!</a>
 </body>
