--- a/twitter.html
+++ b/twitter.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>twitter</title>
 
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="imagens/tela-twitter.jpg" alt="tela-twitter">
+    <img src="imagens/tela-twitter.jpeg" alt="tela-twitter">
 
     <a href="https://twitter.com/guanabara" target="_blank">ACESSE!</a>
 </body>
