--- a/facebook.html
+++ b/facebook.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github</title>
+    <title>Facebook</title>
 
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="tela-github">
+    <img src="imagens/tela-facebook.jpeg" alt="tela-github">
 
     <a href="https://www.facebook.com/gustavoguanabara" target="_blank">ACESSE!</a>
 </body>
