--- a/github.html
+++ b/github.html
@@ -10,6 +10,6 @@
 <body>
     <img src="imagens/tela-github.jpg" alt="tela-github">
 
-    <a href="https://github.com/gustavoguanabara/html-css/tree/master/desafios" target="_blank">ACESSE!</a>
+    <a href="https://github.com/jvmaciel0103" target="_blank">ACESSE!</a>
 </body>
 </html>
