--- a/instagram.html
+++ b/instagram.html
@@ -10,6 +10,6 @@
 <body>
     <img src="imagens\tela-instagram.jpeg" alt="tela-instagram">
 
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE!</a>
+    <a href="https://www.instagram.com/jvmaciel_0103/" target="_blank">ACESSE!</a>
 </body>
 </html>
