--- a/twitter.html
+++ b/twitter.html
@@ -10,6 +10,6 @@
 <body>
     <img src="imagens/tela-twitter.jpeg" alt="tela-twitter">
 
-    <a href="https://twitter.com/guanabara" target="_blank">ACESSE!</a>
+    <a href="https://twitter.com/JMaciel_0103" target="_blank">ACESSE!</a>
 </body>
 </html>
